--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -2,7 +2,7 @@
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/header-bg1.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
