--- a/css/agency.css
+++ b/css/agency.css
@@ -133,7 +133,7 @@ body {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/header-bg.jpg");
+  background-image: url("../img/header-bg.jpeg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
