--- a/css/agency.css
+++ b/css/agency.css
@@ -177,6 +177,10 @@ header.masthead {
       margin-bottom: 50px;
       font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; } }
 
+@media (max-width: 1024px) {
+  header.masthead {
+    background-attachment: scroll; } }
+
 .service-heading {
   margin: 15px 0;
   text-transform: none; }
